# rust-hex

./: Cargo.toml
hex/: Cargo.toml
hex/src/: lib.rs
hex/tests/: macros.rs  version-number.rs
hex_core/: Cargo.toml
hex_core/src/: lib.rs
hex_macro/: Cargo.toml
hex_macro/src/: lib.rs
